deployments/k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: affo-users
spec:
  hosts:
  - arch.homework
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /login/
    - uri:
        prefix: /logout/
    - uri:
        prefix: /user/
    - uri:
        prefix: /register/
    route:
    - destination:
        port:
          number: 80
        host: affo-users
